Projects/Project-001-Roman-Numerals-Converter/NumtoRomanProjCfnTemp.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. 
  The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) 
  Instance using AWS Cloudformation and CLI Services.

Parameters:
  paramVPC:
    Description: Select Your VPC 
    Type: AWS::EC2::VPC::Id

  paramSubnet:
    Description: Select at least 2 subnet
    Type: List<AWS::EC2::Subnet::Id>
  
  paramKeyName:
    Description: Select your KEY
    Type: AWS::EC2::KeyPair::KeyName

  paramMyInsType:
    Description: Select instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro

Mappings:
  RegionImageMap:
    us-east-1:
      AMI: ami-033b95fb8079dc481
    us-east-2:
      AMI: ami-0b614a5d911900a9b
    us-west-1:
      AMI: ami-0ed05376b59b90e46
    us-west-2:
      AMI: ami-0dc8f589abe99f538
    eu-west-1:
      AMI: ami-058b1b7fe545997ae

Resources:
  loadBalancerForNumtoRoman:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups:
        - !GetAtt romanProjectSecGroup.GroupId
      Subnets: !Ref paramSubnet
      Type: application

  listenerForNumtoRomanProj:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - Type: forward
          TargetGroupArn: !Ref targetGrpForNumtoRomanProject
      LoadBalancerArn: !Ref loadBalancerForNumtoRoman # Required
      Port: 80
      Protocol: HTTP

  autoScalingGrpForNumtoRoman:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AvailabilityZones: !GetAZs 
      DesiredCapacity: 2
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref launchTemplateForNumtoRomanApp
        Version: 1
      MaxSize: "3" # Required
      MinSize: "1" # Required
      TargetGroupARNs:
        - !Ref targetGrpForNumtoRomanProject

  policyCPUforNumtoRoman:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref autoScalingGrpForNumtoRoman # Required
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0

  launchTemplateForNumtoRomanApp:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !FindInMap 
          - RegionImageMap
          - !Ref AWS::Region
          - AMI
        InstanceType: !Ref paramMyInsType
        KeyName: !Ref paramKeyName
        SecurityGroupIds:
          - !GetAtt romanProjectSecGroup.GroupId
        TagSpecifications:
         - ResourceType: instance
           Tags:
           - Key: Name
             Value: !Sub Web Server of ${AWS::StackName}
        UserData: !Base64 |
          #! /bin/bash
          yum update -y
          pip3 install flask
          mkdir project && cd project
          wget https://raw.githubusercontent.com/isatemelci1/my-projects/main/aws/projects/Project-001-Roman-Numerals-Converter/app.py
          mkdir templates && cd templates
          wget https://raw.githubusercontent.com/isatemelci1/aws/main/Projects/Project-001-Roman-Numerals-Converter/templates/index.html
          wget https://raw.githubusercontent.com/isatemelci1/aws/main/Projects/Project-001-Roman-Numerals-Converter/templates/result.html
          cd ..
          python3 app.py


  targetGrpForNumtoRomanProject:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 10
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 3
      VpcId: !Ref paramVPC

  romanProjectSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref paramVPC

Outputs:
  AppUrl:
    Description: URL of the ALB
    Value: !Join 
       - ''
       - - 'http://'
         - !GetAtt loadBalancerForNumtoRoman.DNSName
